# pade-laplace

./: CMakeLists.txt  LICENSE  Pade-Laplace Method.sln  README.md
Interpolation/: Interpolation.vcxproj  Interpolation.vcxproj.filters
Interpolation/headers/: Point.h  Spline.h
Interpolation/modules/: Spline.ixx  ThomasMethod.ixx
Kernels/: Kernels.vcxproj  Kernels.vcxproj.filters
Kernels/headers/device/: pl_slae.cuh  polyroot.cuh
Kernels/headers/kernel/: batchedSolver.cuh
Kernels/src/device/: pl_slae.cu  polyroot.cu  residue.cu  transformSplines.cu
Kernels/src/kernel/: batchedSolver.cu  plBatchedVecSolver.cu
Laplace Transform/: Laplace Transform.vcxproj  Laplace Transform.vcxproj.filters
Laplace Transform/headers/: TransformSplines.cuh  TransformTrapezia.cuh  getSpline.h  kernelTransformSplines.cuh
Laplace Transform/src/: TransformSplines.cu  TransformTrapezia.cu  getSpline.cpp  kernelTransformSplines.cu
Numerics/: Numerics.vcxproj
Numerics/headers/: Point.h  Spline.h  pl_slae.cuh  polyroot.cuh  solveAberth.cuh
Numerics/headers/laplace/: format.h  transform.cuh
Numerics/modules/: Spline.ixx  ThomasMethod.ixx
Numerics/src/: pl_slae.cu  polyroot.cu  residue.cu  solveAberth.cu  testAberth.cu
Numerics/src/laplace/: transformSplines.cu  transformTrapezia.cu
Solver/: Solver.vcxproj  Solver.vcxproj.filters
Solver/headers/: getSpline.h  kernel_plBatchedSolver.cuh  plApprox.h  plBatchedSolver.h  plFormat.h  plSolver.h  spline.h  transformTypes.cuh
Solver/headers/device/: residue.cuh  transform.cuh
Solver/src/: batchedSolver.cu  getSpline.cpp  kernel_plBatchedSolver.cu  plApprox.cu  plBatchedSolver.cu  solver.cu  spline.cpp
Solver/src/device/: polyroot.cu  transformSplines.cu  transformTrapezia.cu
Solver/src/kernel/: batchedSolver.cu
Wrapper/: Wrapper.vcxproj  Wrapper.vcxproj.filters
Wrapper/data/: N1D1i2T2ms.txt  e-1.padelpldata  e-1_100.padelpltxt  e-1_1000.padelpltxt  points.txt
Wrapper/src/: codegen.cpp  main.cpp
include/pl/: fit.cuh  fit.h  spline.h
samples/: RC-CR.txt  e-1_10.txt
src/: main.cpp  pade-laplace.cu  solver.cu  spline.cpp
src/device/: fit.cu  fit.cuh  polyroot.cu  polyroot.cuh  residue.cu  residue.cuh  taylor_slae.cu  taylor_slae.cuh  transform.cuh  transform_splines.cu  transform_trapezia.cu
